@@ -10,7 +10,12 @@ from base import *
 from ..utils.wrandom import WeightedRandom
 
 def info():
-    return ['F-Spot', FSpotPhotoList, PhotoSourceFspotUI]
+    return [FSpotPlugin, FSpotPhotoList, PhotoSourceFspotUI]
+
+class FSpotPlugin(PluginBase):
+    
+    def __init__(self):
+        self.name = 'F-Spot'
 
 class FSpotPhotoList(PhotoList):
 
