@@ -1,3 +1,8 @@
+2010-02-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* plugins/*, preferences.py: Changed SOURCE_LIST elements from str
+	  to class ('F-Spot' -> FSpotPlugin).
+
 2010-02-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* photoliststore.py: Fixed a cache file removing bug.
